Add header U.I & display toggle functionality

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
   <body>
     <div class="container">
       <header>
-        <a>
-          <!-- <img src="./assets/logo.svg" alt="Logo" /> -->
+        <a href="#">
+          <img src="./assets/logo.svg" alt="Logo" class="header-logo-img" />
         </a>
 
-        <button>
-          <!-- <img src="./assets/hamburger.svg" alt="" /> -->
+        <button class="header-button">
+          <img src="./assets/hamburger.svg" alt="" class="header-burger-img" />
         </button>
 
         <nav class="main-nav">
