Add overlay with functionality

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   </head>
   <body>
     <div class="container">
+      <div class="overlay"></div>
+
       <header>
         <a href="#">
           <img src="./assets/logo.svg" alt="Logo" class="header-logo-img" />
