--- a/index.html
+++ b/index.html
@@ -19,147 +19,159 @@
   </head>
   <body>
     <div class="container">
-      <div class="overlay"></div>
+      <div class="container-wrapper">
+        <div class="overlay"></div>
 
-      <header>
-        <a href="#">
-          <img src="./assets/logo.svg" alt="Logo" class="header-logo-img" />
-        </a>
+        <header>
+          <a href="#">
+            <img src="./assets/logo.svg" alt="Logo" class="header-logo-img" />
+          </a>
 
-        <button class="header-button">
-          <img src="./assets/hamburger.svg" alt="" class="header-burger-img" />
-        </button>
+          <button class="header-button">
+            <img
+              src="./assets/hamburger.svg"
+              alt=""
+              class="header-burger-img"
+            />
+          </button>
 
-        <nav class="main-nav">
-          <div class="main-nav-wrapper">
-            <button class="main-nav-button">
-              <img src="./assets/icon-menu-close.svg" />
-            </button>
+          <nav class="main-nav">
+            <div class="main-nav-wrapper">
+              <button class="main-nav-button">
+                <img src="./assets/icon-menu-close.svg" />
+              </button>
 
-            <ul class="main-nav-list">
-              <li>
-                <a href="#">Home</a>
-              </li>
-              <li>
-                <a href="#">New</a>
-              </li>
-              <li>
-                <a href="#">Popular</a>
-              </li>
-              <li>
-                <a href="#">Trending</a>
-              </li>
-              <li>
-                <a href="#">Categories</a>
-              </li>
-            </ul>
+              <ul class="main-nav-list">
+                <li>
+                  <a href="#">Home</a>
+                </li>
+                <li>
+                  <a href="#">New</a>
+                </li>
+                <li>
+                  <a href="#">Popular</a>
+                </li>
+                <li>
+                  <a href="#">Trending</a>
+                </li>
+                <li>
+                  <a href="#">Categories</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </header>
+
+        <main>
+          <article
+            class="main-article"
+            itemscope
+            itemtype="https://schema.org/NewsArticle"
+          >
+            <figure>
+              <img
+                src="./assets/image-web-3-mobile.jpg"
+                alt="Web 3.0"
+                class="main-article-img"
+              />
+            </figure>
+
+            <h1 class="main-article-title" itemprop="name">
+              The Bright Future of Web 3.0?
+            </h1>
+
+            <div class="main-article-descriptions">
+              <p class="main-article-description" itemprop="abstract">
+                We dive into the next evolution of the web that claims to put
+                the power of the platforms back into the hands of the people.
+                But is it really fulfilling its promise?
+              </p>
+
+              <a href="#" class="main-article-link" itemprop="url">Read More</a>
+            </div>
+          </article>
+
+          <aside class="main-aside">
+            <h2>New</h2>
+
+            <article itemscope itemtype="https://schema.org/NewsArticle">
+              <a href="#" itemprop="url">
+                <h3 itemprop="name">Hydrogen VS Electric Cars</h3>
+                <p itemprop="abstract">
+                  Will hydrogen-fueled cars ever catch up to EVs?
+                </p>
+              </a>
+            </article>
+
+            <article itemscope itemtype="https://schema.org/NewsArticle">
+              <a href="#" itemprop="url">
+                <h3 itemprop="name">The Downsides of AI Artistry</h3>
+                <p itemprop="abstract">
+                  What are the possible adverse effects of on-demand AI image
+                  generation?
+                </p>
+              </a>
+            </article>
+
+            <article itemscope itemtype="https://schema.org/NewsArticle">
+              <a href="#" itemprop="url">
+                <h3 itemprop="name">Is VC Funding Drying Up?</h3>
+                <p itemprop="abstract">
+                  Private funding by VC firms is down 50% YOY. We take a look at
+                  what that means. 01 Reviving Retro PCs What happens
+                </p>
+              </a>
+            </article>
+          </aside>
+
+          <div class="secondary-articles">
+            <article itemscope itemtype="https://schema.org/NewsArticle">
+              <a href="#" itemprop="url">
+                <figure>
+                  <!-- <img src="./assets/image-retro-pcs.jpg" /> -->
+                </figure>
+
+                <div>
+                  <h2 itemprop="name">Reviving Retro PCs</h2>
+                  <p itemprop="abstract">
+                    What happens when old PCs are given modern upgrades?
+                  </p>
+                </div>
+              </a>
+            </article>
+
+            <article itemscope itemtype="https://schema.org/NewsArticle">
+              <a href="#" itemprop="url">
+                <figure>
+                  <!-- <img src="./assets/image-top-laptops.jpg" /> -->
+                </figure>
+
+                <div>
+                  <h3 itemprop="name">Top 10 Laptops of 2022</h3>
+                  <p itemprop="abstract">
+                    Our best pics for various needs and budgets
+                  </p>
+                </div>
+              </a>
+            </article>
+
+            <article itemscope itemtype="https://schema.org/NewsArticle">
+              <a href="#" itemprop="url">
+                <figure>
+                  <!-- <img src="./assets//image-gaming-growth.jpg" /> -->
+                </figure>
+
+                <div>
+                  <h2 itemprop="name">The Growth of Gaming</h2>
+                  <p itemprop="abstract">
+                    How the pandemc has sparked fresh opportunities
+                  </p>
+                </div>
+              </a>
+            </article>
           </div>
-        </nav>
-      </header>
-
-      <main>
-        <article
-          class="main-article"
-          itemscope
-          itemtype="https://schema.org/NewsArticle"
-        >
-          <figure>
-            <!-- <img src="./assets/image-web-3-mobile.jpg" alt="Web 3.0" /> -->
-          </figure>
-
-          <h1 itemprop="name">The Bright Future of Web 3.0?</h1>
-
-          <div class="main-description">
-            <p itemprop="abstract">
-              We dive into the next evolution of the web that claims to put the
-              power of the platforms back into the hands of the people. But is
-              it really fulfilling its promise?
-            </p>
-
-            <a href="#" itemprop="url">Read More</a>
-          </div>
-        </article>
-
-        <aside class="main-aside">
-          <h2>New</h2>
-
-          <article itemscope itemtype="https://schema.org/NewsArticle">
-            <a href="#" itemprop="url">
-              <h3 itemprop="name">Hydrogen VS Electric Cars</h3>
-              <p itemprop="abstract">
-                Will hydrogen-fueled cars ever catch up to EVs?
-              </p>
-            </a>
-          </article>
-
-          <article itemscope itemtype="https://schema.org/NewsArticle">
-            <a href="#" itemprop="url">
-              <h3 itemprop="name">The Downsides of AI Artistry</h3>
-              <p itemprop="abstract">
-                What are the possible adverse effects of on-demand AI image
-                generation?
-              </p>
-            </a>
-          </article>
-
-          <article itemscope itemtype="https://schema.org/NewsArticle">
-            <a href="#" itemprop="url">
-              <h3 itemprop="name">Is VC Funding Drying Up?</h3>
-              <p itemprop="abstract">
-                Private funding by VC firms is down 50% YOY. We take a look at
-                what that means. 01 Reviving Retro PCs What happens
-              </p>
-            </a>
-          </article>
-        </aside>
-
-        <div class="secondary-articles">
-          <article itemscope itemtype="https://schema.org/NewsArticle">
-            <a href="#" itemprop="url">
-              <figure>
-                <!-- <img src="./assets/image-retro-pcs.jpg" /> -->
-              </figure>
-
-              <div>
-                <h2 itemprop="name">Reviving Retro PCs</h2>
-                <p itemprop="abstract">
-                  What happens when old PCs are given modern upgrades?
-                </p>
-              </div>
-            </a>
-          </article>
-
-          <article itemscope itemtype="https://schema.org/NewsArticle">
-            <a href="#" itemprop="url">
-              <figure>
-                <!-- <img src="./assets/image-top-laptops.jpg" /> -->
-              </figure>
-
-              <div>
-                <h3 itemprop="name">Top 10 Laptops of 2022</h3>
-                <p itemprop="abstract">
-                  Our best pics for various needs and budgets
-                </p>
-              </div>
-            </a>
-          </article>
-
-          <article itemscope itemtype="https://schema.org/NewsArticle">
-            <a href="#" itemprop="url">
-              <figure>
-                <!-- <img src="./assets//image-gaming-growth.jpg" /> -->
-              </figure>
-
-              <div>
-                <h2 itemprop="name">The Growth of Gaming</h2>
-                <p itemprop="abstract">
-                  How the pandemc has sparked fresh opportunities
-                </p>
-              </div>
-            </a>
-          </article>
-        </div>
-      </main>
+        </main>
+      </div>
     </div>
   </body>
 </html>
