--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </h1>
 
             <div class="main-article-descriptions">
-              <p class="main-article-description" itemprop="abstract">
+              <p itemprop="abstract">
                 We dive into the next evolution of the web that claims to put
                 the power of the platforms back into the hands of the people.
                 But is it really fulfilling its promise?
@@ -92,47 +92,64 @@
           </article>
 
           <aside class="main-aside">
-            <h2>New</h2>
+            <div class="main-aside-wrapper">
+              <h2 class="main-aside-title">New</h2>
 
-            <article itemscope itemtype="https://schema.org/NewsArticle">
-              <a href="#" itemprop="url">
-                <h3 itemprop="name">Hydrogen VS Electric Cars</h3>
-                <p itemprop="abstract">
-                  Will hydrogen-fueled cars ever catch up to EVs?
-                </p>
-              </a>
-            </article>
+              <article
+                itemscope
+                itemtype="https://schema.org/NewsArticle"
+                class="main-aside-article"
+              >
+                <a href="#" class="main-aside-link" itemprop="url">
+                  <h3 itemprop="name">Hydrogen VS Electric Cars</h3>
+                  <p itemprop="abstract">
+                    Will hydrogen-fueled cars ever catch up to EVs?
+                  </p>
+                </a>
+              </article>
 
-            <article itemscope itemtype="https://schema.org/NewsArticle">
-              <a href="#" itemprop="url">
-                <h3 itemprop="name">The Downsides of AI Artistry</h3>
-                <p itemprop="abstract">
-                  What are the possible adverse effects of on-demand AI image
-                  generation?
-                </p>
-              </a>
-            </article>
+              <article
+                itemscope
+                itemtype="https://schema.org/NewsArticle"
+                class="main-aside-article"
+              >
+                <a href="#" class="main-aside-link" itemprop="url">
+                  <h3 itemprop="name">The Downsides of AI Artistry</h3>
+                  <p itemprop="abstract">
+                    What are the possible adverse effects of on-demand AI image
+                    generation?
+                  </p>
+                </a>
+              </article>
 
-            <article itemscope itemtype="https://schema.org/NewsArticle">
-              <a href="#" itemprop="url">
-                <h3 itemprop="name">Is VC Funding Drying Up?</h3>
-                <p itemprop="abstract">
-                  Private funding by VC firms is down 50% YOY. We take a look at
-                  what that means. 01 Reviving Retro PCs What happens
-                </p>
-              </a>
-            </article>
+              <article
+                itemscope
+                itemtype="https://schema.org/NewsArticle"
+                class="main-aside-article"
+              >
+                <a href="#" class="main-aside-link" itemprop="url">
+                  <h3 itemprop="name">Is VC Funding Drying Up?</h3>
+                  <p itemprop="abstract">
+                    Private funding by VC firms is down 50% YOY. We take a look
+                    at what that means
+                  </p>
+                </a>
+              </article>
+            </div>
           </aside>
 
           <div class="secondary-articles">
             <article itemscope itemtype="https://schema.org/NewsArticle">
-              <a href="#" itemprop="url">
+              <a href="#" class="secondary-article-link" itemprop="url">
                 <figure>
-                  <!-- <img src="./assets/image-retro-pcs.jpg" /> -->
+                  <img
+                    src="./assets/image-retro-pcs.jpg"
+                    class="secondary-article-img"
+                  />
                 </figure>
 
                 <div>
-                  <h2 itemprop="name">Reviving Retro PCs</h2>
+                  <h3 itemprop="name">Reviving Retro PCs</h3>
                   <p itemprop="abstract">
                     What happens when old PCs are given modern upgrades?
                   </p>
@@ -141,9 +158,12 @@
             </article>
 
             <article itemscope itemtype="https://schema.org/NewsArticle">
-              <a href="#" itemprop="url">
+              <a href="#" class="secondary-article-link" itemprop="url">
                 <figure>
-                  <!-- <img src="./assets/image-top-laptops.jpg" /> -->
+                  <img
+                    src="./assets/image-top-laptops.jpg"
+                    class="secondary-article-img"
+                  />
                 </figure>
 
                 <div>
@@ -156,13 +176,16 @@
             </article>
 
             <article itemscope itemtype="https://schema.org/NewsArticle">
-              <a href="#" itemprop="url">
+              <a href="#" class="secondary-article-link" itemprop="url">
                 <figure>
-                  <!-- <img src="./assets//image-gaming-growth.jpg" /> -->
+                  <img
+                    src="./assets//image-gaming-growth.jpg"
+                    class="secondary-article-img"
+                  />
                 </figure>
 
                 <div>
-                  <h2 itemprop="name">The Growth of Gaming</h2>
+                  <h3 itemprop="name">The Growth of Gaming</h3>
                   <p itemprop="abstract">
                     How the pandemc has sparked fresh opportunities
                   </p>
