Add header navigation U.I for tablet

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="overlay"></div>
 
         <header>
-          <a href="#">
+          <a href="#" class="header-logo-link">
             <img src="./assets/logo.svg" alt="Logo" class="header-logo-img" />
           </a>
 
