--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
 
         <header>
           <a href="#" class="header-logo-link">
-            <img src="./assets/logo.svg" alt="Logo" class="header-logo-img" />
+            <img src="./assets/logo.svg" class="header-logo-img" alt="Logo" />
           </a>
 
           <button class="header-button">
             <img
               src="./assets/hamburger.svg"
-              alt=""
               class="header-burger-img"
+              alt=""
             />
           </button>
 
           <nav class="main-nav">
             <div class="main-nav-wrapper">
               <button class="main-nav-button">
-                <img src="./assets/icon-menu-close.svg" />
+                <img src="./assets/icon-menu-close.svg" alt="" />
               </button>
 
               <ul class="main-nav-list">
@@ -74,14 +74,13 @@
                 <source
                   srcset="./assets/image-web-3-desktop.jpg"
                   media="(min-width: 700px)"
+                  alt="Web 3.0"
                 />
                 <img src="./assets/image-web-3-mobile.jpg" alt="Web 3.0" />
               </picture>
             </figure>
 
-            <h1 class="main-article-title" itemprop="name">
-              The Bright Future of Web 3.0?
-            </h1>
+            <h1 itemprop="name">The Bright Future of Web 3.0?</h1>
 
             <div class="main-article-descriptions">
               <p itemprop="abstract">
@@ -148,6 +147,7 @@
                   <img
                     src="./assets/image-retro-pcs.jpg"
                     class="secondary-article-img"
+                    alt="Computer"
                   />
                 </figure>
 
@@ -166,6 +166,7 @@
                   <img
                     src="./assets/image-top-laptops.jpg"
                     class="secondary-article-img"
+                    alt="Keyboard"
                   />
                 </figure>
 
@@ -184,6 +185,7 @@
                   <img
                     src="./assets//image-gaming-growth.jpg"
                     class="secondary-article-img"
+                    alt="Console"
                   />
                 </figure>
 
